fix: :bug: Fixed bug from about page
Fixed bug from about page (everything used to look out of place on mobile) and added menu with macros

--- a/app/static/styles/about.css
+++ b/app/static/styles/about.css
@@ -4,9 +4,7 @@ body {
   background-color: #161616;
   margin: 0;
   height: 100%;
-  width: 100%;
-
-  min-height: 100vh;
+  max-width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -57,8 +55,13 @@ body {
   opacity: 0.05;
   height: 100%;
   width: 100%;
+  max-width: 100%;
   top: 0;
   z-index: -1;
+}
+
+article {
+  max-width: 100%;
 }
 
 .about-container {
@@ -69,13 +72,15 @@ body {
 
 .about-container h1 {
   font-family: 'Gemunu Libre', sans-serif;
-  font-size: 9rem;
-  font-weight: 300;
-  color: #fff;
-  text-align: start;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-  padding: 1rem;
+  color: white;
+  text-align: center;
+  font-size: 8rem;
+  margin: 4rem 0 0 0;
+  width: fit-content;
+  right: 0;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about-content-container {
@@ -175,6 +180,7 @@ body {
   .about-container h1 {
     font-size: 6rem;
     margin-bottom: 0;
+    margin-top: 6rem;
     align-self: center;
   }
 
